--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -322,8 +322,8 @@
                                 <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                     If your insert, or polystyrene does not
                                     fit your vase, you're going to need to cut
-                                    the foam with a hotwire tool. The inserts don't 
-                                    have to be perfect, but tight enough to hold your 
+                                    the foam with a hotwire tool. The inserts don't
+                                    have to be perfect, but tight enough to hold your
                                     flower arrangement in place.
                                 </p>
                             </div>
@@ -394,11 +394,30 @@
                     <!-- start of two columns -->
                     <div class="section">
                         <div class="columns has-text-centered">
-                            <div class="column">
+                            <div class="column is-half">
                                 <div class="block">
                                     <header class="container has-text-centered">
                                         <h4 class="is-size-4 has-text-weight-bold">Handhelds</h4>
                                     </header>
+                                </div>
+                                <div class="block">
+                                    <div class="card">
+                                        <div class="card-image">
+                                            <figure class="image">
+                                                <img src="https://m.media-amazon.com/images/I/61bBTf33dqL._AC_SX425_.jpg"
+                                                    alt="hotwire tool kit">
+                                            </figure>
+                                        </div>
+                                        <footer class="card-footer">
+                                            <a class="card-footer-item button is-warning is-justify-content-center"
+                                                href="https://a.co/d/bFnXhU9" target="_blank" rel="noopener noreferrer">
+                                                <span class="icon">
+                                                    <i class="fa-brands fa-amazon"></i>
+                                                </span>
+                                                <span>Amazon</span>
+                                            </a>
+                                        </footer>
+                                    </div>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
@@ -410,50 +429,69 @@
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                         These hotwire tools are sufficient enough for
-                                        this project, but may take more patience when first 
+                                        this project, but may take more patience when first
                                         using.
                                     </p>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        A common issue with these tools involves the lack of tension 
-                                        control they may have. As you're cutting polystyrene, the hotwire 
+                                        A common issue with these tools involves the lack of tension
+                                        control they may have. As you're cutting polystyrene, the hotwire
                                         may loosen and slide down the tool, or even break.
                                     </p>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        This can lead to accuracy issues when cutting polystyrene. 
-                                        Also, having to stop and readjust the wire 
-                                        constantly can be very frustrating. 
+                                        This can lead to accuracy issues when cutting polystyrene.
+                                        Also, having to stop and readjust the wire
+                                        constantly can be very frustrating.
                                     </p>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        So always make sure your wire is tied 
-                                        tightly before you start cutting by wrapping each end of the 
+                                        So always make sure your wire is tied
+                                        tightly before you start cutting by wrapping each end of the
                                         wire around the tool, and then checking the wire tension.
                                     </p>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        Other issues with these affordable hotwire tools are 
+                                        Other issues with these affordable hotwire tools are
                                         questionable durability, and a lack of safety features.
                                     </p>
                                 </div>
                             </div>
-                            <div class="column">
+                            <div class="column is-half">
                                 <div class="block">
                                     <header class="container has-text-centered">
                                         <h4 class="is-size-4 has-text-weight-bold">Tabletops</h4>
                                     </header>
                                 </div>
                                 <div class="block">
+                                    <div class="card">
+                                        <div class="card-image">
+                                            <figure class="image">
+                                                <img src="https://m.media-amazon.com/images/I/716XC-m0iZL._AC_SX425_.jpg"
+                                                    alt="hotwire tabletop">
+                                            </figure>
+                                        </div>
+                                        <footer class="card-footer">
+                                            <a class="card-footer-item button is-warning is-justify-content-center"
+                                                href="https://a.co/d/1FsMaXa" target="_blank" rel="noopener noreferrer">
+                                                <span class="icon">
+                                                    <i class="fa-brands fa-amazon"></i>
+                                                </span>
+                                                <span>Amazon</span>
+                                            </a>
+                                        </footer>
+                                    </div>
+                                </div>
+                                <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                         A hotwire tabletop is a more
-                                        long term option. If choosing a tabletop 
-                                        we suggest you use polystyrene squares or blocks to make your circles. 
-                                        You can buy a sheet of polystyrene, and cut small squares when you need to 
+                                        long term option. If choosing a tabletop
+                                        we suggest you use polystyrene squares or blocks to make your circles.
+                                        You can buy a sheet of polystyrene, and cut small squares when you need to
                                         make a bouquet base.
                                     </p>
                                 </div>
@@ -461,18 +499,31 @@
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                         Some hotwire tabletops come with an attachment that
                                         lets you create perfect circles easily.
-                                        This attachment is placed on an adjustable guide arm ("dimension ruler"), and has 
+                                        This attachment is placed on an adjustable guide arm ("dimension ruler"), and
+                                        has
                                         a spike to hold your polystyrene.
                                     </p>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        Place the piece of polystyrene on the attachment.   
-                                        Move the guide arm and the attachment close to your 
-                                        hotwire pillar. Turn your hotwire temperature up, wait until it heats up, then
-                                        slowly rotate your polystyrene completely until your circle is done, turn your hotwire off. 
-                                        The spike keeps the polystyrene in place, whilst the hotwire is cutting off the unnecessary ends.
+                                        Place the piece of polystyrene on the attachment.
+                                        Move the guide arm and the attachment close to your
+                                        hotwire pillar.
                                     </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        Turn your hotwire temperature up, wait until it heats up, then
+                                        slowly rotate your polystyrene completely until your circle is done, turn your
+                                        hotwire off.
+                                        The spike keeps the polystyrene in place, whilst the hotwire is cutting off the
+                                        unnecessary ends.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <figure class="image is-flex is-justify-content-center">
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PDUGLNdQD6I?start=5&end=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    </figure>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
@@ -485,11 +536,17 @@
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        Remember a circle's radius is half the size of a circle. If you need a 
-                                        circle that is 3 inches long, it must have a 1.5 inch radius. From your hotwire, your 
-                                        attachment should be 1.5 inches away. Make sure the spike on the attachment is in the 
-                                        center of your polystyrene area, and start cutting. Depending on your measurements, and how much your hotwire 
-                                        takes off, your circle should be around the desired 3 inch length. 
+                                        Remember a circle's radius is half the size of a circle. If you need a
+                                        circle that is 3 inches long, it must have a 1.5 inch radius. From your hotwire,
+                                        measure 1.5 inches, and move your guide arm to this spot.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        Make sure your polystyrene 
+                                        is centered on the spike, and start cutting. Depending on your
+                                        measurements, and how much your hotwire
+                                        takes off, your circle should be around the desired 3 inch length.
                                     </p>
                                 </div>
                             </div>
