--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -99,7 +99,7 @@
             <!-- start of step 1-->
             <section class="section has-background-light">
                 <header class="container has-text-centered my-6">
-                    <h2 class="is-size-2 has-text-weight-bold">Step 1: Select your your flowers</h2>
+                    <h2 class="is-size-2 has-text-weight-bold">Step 1: Select your flowers</h2>
                 </header>
                 <!-- start of two columns -->
                 <div class="section">
@@ -159,7 +159,7 @@
             <!-- start of step 2 -->
             <section class="section">
                 <header class="container has-text-centered my-6">
-                    <h2 class="is-size-2 has-text-weight-bold">Step 2: Select your your vase</h2>
+                    <h2 class="is-size-2 has-text-weight-bold">Step 2: Select your vase</h2>
                 </header>
                 <!-- start of two columns -->
                 <div class="section">
