--- a/src/about.html
+++ b/src/about.html
@@ -168,11 +168,11 @@
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
                     <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank"
-                            rel="noopener noreferrer">Ebay</a></p>
+                            rel="noopener noreferrer follow">Ebay</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
-                            target="_blank" rel="noopener noreferrer">Pinterest</a></p>
+                            target="_blank" rel="noopener noreferrer follow">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
-                            target="_blank" rel="noopener noreferrer">Redbubble</a></p>
+                            target="_blank" rel="noopener noreferrer follow">Redbubble</a></p>
                 </div>
             </div>
             <div class="column">
