--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -12,10 +12,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="images\rosy-arc-favicon.svg" />
     <link rel="stylesheet" href="mybulma/css/mystyles.css" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- social media sharing -->
     <meta property="og:url" content="https://www.rosyarc.com/diy-cemetery-bouquet.html" />
     <meta property="og:type" content="article" />
@@ -25,6 +21,10 @@
     <meta property="og:image" content="https://rosyarc.com/images/article1/flowers.webp" />
     <meta name="twitter:image" content="https://rosyarc.com/images/article1/flowers.webp">
     <meta property="pinterest:image" content="https://rosyarc.com/images/article1/flowers.webp">
+    <!-- font awesome and sharethis -->
+    <script type='text/javascript'
+        src='https://platform-api.sharethis.com/js/sharethis.js#property=6454f47e8422190019dbb7f6&product=sop'
+        async='async'></script>
     <script src="https://kit.fontawesome.com/dc7be97532.js" crossorigin="anonymous"></script>
 </head>
 
@@ -130,7 +130,7 @@
                 <div class="buttons is-justify-content-center my-6">
                     <a class="has-text-light button is-info"
                         href="https://www.hobbylobby.com/Floral-Wedding/Florals/c/4-120" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -138,7 +138,7 @@
                     </a>
                     <a class="has-text-light button is-success"
                         href="https://www.joann.com/floral/floral-stems-bushes-picks/floral-bushes/" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -146,7 +146,7 @@
                     </a>
                     <a class="has-text-light button  is-danger" <a
                         href="https://www.michaels.com/shop/floral/floral-stems-bushes-picks/floral-bushes"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -207,21 +207,21 @@
                 <div class="buttons is-justify-content-center my-6">
                     <a class="button is-warning"
                         href="https://www.amazon.com/s?k=cemetery+vases&crid=G29QP07W2OVN&sprefix=cemetery+vases%2Caps%2C317&ref=nb_sb_noss_1"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-brands fa-amazon"></i>
                         </span>
                         <span>Amazon</span>
                     </a>
                     <a class="has-text-light button is-success" href="https://ebay.us/vEmRis" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer sponsored">
                         <span class="icon">
                             <i class="fa-brands fa-ebay"></i>
                         </span>
                         <span>Ebay Affiliate</span>
                     </a>
                     <a class="has-text-light button is-danger" href="https://www.michaels.com/search?q=cemetery%20vases"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -252,7 +252,7 @@
                                     <div class="block">
                                         <a class="has-text-light button is-success"
                                             href="https://www.ebay.com/usr/rosyarc" target="_blank"
-                                            rel="noopener noreferrer">
+                                            rel="noopener noreferrer follow">
                                             <span class="icon">
                                                 <i class="fa-solid fa-store"></i>
                                             </span>
@@ -279,7 +279,7 @@
                                     <div class="block">
                                         <a class="has-text-light button is-black"
                                             href="https://www.pinterest.com/ihavearosyarc/" target="_blank"
-                                            rel="noopener noreferrer">
+                                            rel="noopener noreferrer follow">
                                             <span>Follow on </span>
                                             <span class="icon">
                                                 <i class="fa-brands fa-pinterest"></i>
@@ -351,7 +351,7 @@
                 <div class="buttons is-justify-content-center my-6">
                     <a class="button is-warning"
                         href="https://www.amazon.com/s?k=floral+foam+vase+insert&crid=3ANVSUHIB9S8C&sprefix=floral+foam+vase+insert%2Caps%2C143&ref=nb_sb_noss_1"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-brands fa-amazon"></i>
                         </span>
@@ -359,7 +359,7 @@
                     </a>
                     <a class="has-text-light button is-danger"
                         href="https://www.michaels.com/search?q=memorial%20vase%20insert" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -367,7 +367,7 @@
                     </a>
                     <a class="button is-warning"
                         href="https://www.amazon.com/s?k=polystyrene+circle&crid=1VET4RWU8VRQ8&sprefix=polystyrene+circle%2Caps%2C146&ref=nb_sb_noss_1"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-brands fa-amazon"></i>
                         </span>
@@ -375,7 +375,7 @@
                     </a>
                     <a class="has-text-light button  is-danger" <a
                         href="https://www.michaels.com/search?q=polystyrene%20circles" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -410,7 +410,8 @@
                                         </div>
                                         <footer class="card-footer">
                                             <a class="card-footer-item button is-warning is-justify-content-center"
-                                                href="https://a.co/d/bFnXhU9" target="_blank" rel="noopener noreferrer">
+                                                href="https://a.co/d/bFnXhU9" target="_blank"
+                                                rel="noopener noreferrer follow">
                                                 <span class="icon">
                                                     <i class="fa-brands fa-amazon"></i>
                                                 </span>
@@ -477,7 +478,8 @@
                                         </div>
                                         <footer class="card-footer">
                                             <a class="card-footer-item button is-warning is-justify-content-center"
-                                                href="https://a.co/d/1FsMaXa" target="_blank" rel="noopener noreferrer">
+                                                href="https://a.co/d/1FsMaXa" target="_blank"
+                                                rel="noopener noreferrer follow">
                                                 <span class="icon">
                                                     <i class="fa-brands fa-amazon"></i>
                                                 </span>
@@ -522,7 +524,11 @@
                                 </div>
                                 <div class="block">
                                     <figure class="image is-flex is-justify-content-center">
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PDUGLNdQD6I?start=5&end=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/PDUGLNdQD6I?start=5&end=18"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                            allowfullscreen></iframe>
                                     </figure>
                                 </div>
                                 <div class="block">
@@ -543,7 +549,7 @@
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        Make sure your polystyrene 
+                                        Make sure your polystyrene
                                         is centered on the spike, and start cutting. Depending on your
                                         measurements, and how much your hotwire
                                         takes off, your circle should be around the desired 3 inch length.
@@ -566,14 +572,14 @@
                                 <div class="buttons is-justify-content-center">
                                     <a class="button is-warning"
                                         href="https://www.amazon.com/s?k=hotwire+foam+cutter&crid=1IIW988TIJCWT&sprefix=hotwire%2Caps%2C120&ref=nb_sb_ss_ts-doa-p_3_7"
-                                        target="_blank" rel="noopener noreferrer">
+                                        target="_blank" rel="noopener noreferrer follow">
                                         <span class="icon">
                                             <i class="fa-brands fa-amazon"></i>
                                         </span>
                                         <span>Amazon</span>
                                     </a>
                                     <a class="has-text-light button is-success" href="https://ebay.us/77B7O8"
-                                        target="_blank" rel="noopener noreferrer">
+                                        target="_blank" rel="noopener noreferrer sponsored">
                                         <span class="icon">
                                             <i class="fa-brands fa-ebay"></i>
                                         </span>
@@ -581,7 +587,7 @@
                                     </a>
                                     <a class="has-text-light button is-info"
                                         href="https://www.hobbylobby.com/Crafts-Hobbies/Basic-Crafts/Styrofoam/3-In-1-Hot-Wire-Foam-Cutting-Tool/p/80916662"
-                                        target="_blank" rel="noopener noreferrer">
+                                        target="_blank" rel="noopener noreferrer follow">
                                         <span class="icon">
                                             <i class="fa-solid fa-bag-shopping"></i>
                                         </span>
@@ -598,14 +604,14 @@
                                 <div class="buttons is-justify-content-center">
                                     <a class="button is-warning"
                                         href="https://www.amazon.com/s?k=hot+wire+tabletop&ref=nb_sb_noss"
-                                        target="_blank" rel="noopener noreferrer">
+                                        target="_blank" rel="noopener noreferrer follow">
                                         <span class="icon">
                                             <i class="fa-brands fa-amazon"></i>
                                         </span>
                                         <span>Amazon</span>
                                     </a>
                                     <a class="has-text-light button is-success" href="https://ebay.us/dSihgc"
-                                        target="_blank" rel="noopener noreferrer">
+                                        target="_blank" rel="noopener noreferrer sponsored">
                                         <span class="icon">
                                             <i class="fa-brands fa-ebay"></i>
                                         </span>
@@ -668,14 +674,14 @@
                 <div class="buttons is-justify-content-center my-6">
                     <a class="button is-warning"
                         href="https://www.amazon.com/Mod-Podge-Waterbase-Outdoor-CS11220/dp/B001681ZA4/ref=sr_1_1?crid=G2GCNNJNSSOX&keywords=mod%2Bpodge%2Boutdoor&qid=1683184158&sprefix=mod%2Bpodge%2Boutdo%2Caps%2C158&sr=8-1&th=1"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-brands fa-amazon"></i>
                         </span>
                         <span>Amazon</span>
                     </a>
                     <a class="has-text-light button is-success" href="https://ebay.us/qDTwUB" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer sponsored">
                         <span class="icon">
                             <i class="fa-brands fa-ebay"></i>
                         </span>
@@ -683,7 +689,7 @@
                     </a>
                     <a class="has-text-light button is-info"
                         href="https://www.hobbylobby.com/Crafts-Hobbies/Glue-Adhesives/Liquid/Mod-Podge-Outdoor/p/93932"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -691,7 +697,7 @@
                     </a>
                     <a class="has-text-light button is-danger"
                         href="https://www.michaels.com/search?q=modpodge%20outdoor&com_id=SearchBar_Recommendation_Components&path=suggest"
-                        target="_blank" rel="noopener noreferrer">
+                        target="_blank" rel="noopener noreferrer follow">
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
@@ -722,6 +728,22 @@
         </article>
     </main>
     <!-- end of main content -->
+    <!-- cookie acknowledgement -->
+    <div id="cookieMsg" class="card">
+        <div class="card-content">
+            <button class="delete is-medium has-background-dark" aria-label="delete"></button>
+            <span class="icon">
+                <i class="fa-solid fa-cookie-bite fa-xl" style="color: #663300;"></i>
+            </span>
+            <p>
+                Just so you know, this site uses cookies.
+                <a href="https://www.cookiesandyou.com/" target="_blank" rel="noopener noreferrer"
+                    class="has-text-info is-underlined">
+                    What are cookies?
+                </a>
+            </p>
+        </div>
+    </div>
     <!-- go to TOP -->
     <button id="top" class="button has-background-black has-text-light py-4 px-4">Top</button>
     <!-- start of footer -->
@@ -731,11 +753,11 @@
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
                     <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank"
-                            rel="noopener noreferrer">Ebay</a></p>
+                            rel="noopener noreferrer follow">Ebay</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
-                            target="_blank" rel="noopener noreferrer">Pinterest</a></p>
+                            target="_blank" rel="noopener noreferrer follow">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
-                            target="_blank" rel="noopener noreferrer">Redbubble</a></p>
+                            target="_blank" rel="noopener noreferrer follow">Redbubble</a></p>
                 </div>
             </div>
             <div class="column">
