--- a/src/index.html
+++ b/src/index.html
@@ -256,7 +256,7 @@
                             our store page on Ebay.
                         </p>
                         <a class="has-text-light button is-medium is-success my-6"
-                            href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener noreferrer">
+                            href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener noreferrer follow">
                             <span class="icon">
                                 <i class="fa-solid fa-store"></i>
                             </span>
@@ -270,7 +270,7 @@
                             to keep up to date with our latest designs.
                         </p>
                         <a class="has-text-light button is-medium is-success my-6"
-                            href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener noreferrer">
+                            href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener noreferrer follow">
                             <span>Follow on </span>
                             <span class="icon">
                                 <i class="fa-brands fa-pinterest"></i>
@@ -332,11 +332,11 @@
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
                     <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank"
-                            rel="noopener noreferrer">Ebay</a></p>
+                            rel="noopener noreferrer follow">Ebay</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
-                            target="_blank" rel="noopener noreferrer">Pinterest</a></p>
+                            target="_blank" rel="noopener noreferrer follow">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
-                            target="_blank" rel="noopener noreferrer">Redbubble</a></p>
+                            target="_blank" rel="noopener noreferrer follow">Redbubble</a></p>
                 </div>
             </div>
             <div class="column">
