--- a/src/about.html
+++ b/src/about.html
@@ -160,7 +160,7 @@
         <!-- end of delivery -->
     </main>
     <!-- go to TOP -->
-    <button id="top" class="button has-background-black has-text-light py-4 px-4">Top</button>
+    <button id="top" class="is-hidden button has-background-black has-text-light py-4 px-4">Top</button>
     <!-- start of footer -->
     <footer class="footer has-background-black">
         <div id="footer" class="columns mt-6">
