--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -745,7 +745,7 @@
         </div>
     </div>
     <!-- go to TOP -->
-    <button id="top" class="button has-background-black has-text-light py-4 px-4">Top</button>
+    <button id="top" class="is-hidden button has-background-black has-text-light py-4 px-4">Top</button>
     <!-- start of footer -->
     <footer class="footer has-background-black">
         <div id="footer" class="columns mt-6">
@@ -791,6 +791,7 @@
     </footer>
     <!-- end of footer -->
     <script src="js/global.js"></script>
+    <script src="js/article.js"></script>
 </body>
 
 </html>
