navbar logo, added extra icons to about & gallery

--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="rosy arc, silk flower arrangements, cemetery flowers" />
     <meta name="author" content="Rosy Arc" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="images\rosy-arc-favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="images/rosy-arc-favicon.svg" />
     <link rel="stylesheet" href="mybulma/css/mystyles.css" />
     <!-- social media sharing -->
     <meta property="og:url" content="https://www.rosyarc.com/diy-cemetery-bouquet.html" />
@@ -35,6 +35,9 @@
         <div class="navbar-brand is-justify-content-space-between">
             <a class="navbar-item pl-5 py-5" href="index.html">
                 <img src="images/rosy-arc-logo-2023.svg" alt="rosy arc logo" style="max-height: 70px">
+                <p class="navbar-item has-text-light has-text-weight-semibold is-size-3">
+                    Rosy Arc
+                </p>
             </a>
             <a id="burger" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
@@ -61,7 +64,7 @@
                         </a>
                     </div>
                 </div>
-                <a href="about.html" class="navbar-item is-size-4">
+                <a href="about.html" class="navbar-item is-size-4 is-active">
                     <p>About</p>
                 </a>
             </div>
