--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="rosy arc, silk flower arrangements, cemetery flowers" />
     <meta name="author" content="Rosy Arc" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="images\rosy-arc-favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="images/rosy-arc-favicon.svg" />
     <link rel="stylesheet" href="mybulma/css/mystyles.css" />
     <script src="https://kit.fontawesome.com/dc7be97532.js" crossorigin="anonymous"></script>
 </head>
@@ -23,6 +23,9 @@
         <div class="navbar-brand is-justify-content-space-between">
             <a class="navbar-item pl-5 py-5" href="index.html">
                 <img src="images/rosy-arc-logo-2023.svg" alt="rosy arc logo" style="max-height: 70px">
+                <p class="navbar-item has-text-light has-text-weight-semibold is-size-3">
+                    Rosy Arc
+                </p>
             </a>
             <a id="burger" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
@@ -270,7 +273,8 @@
                             to keep up to date with our latest designs.
                         </p>
                         <a class="has-text-light button is-medium is-success my-6"
-                            href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener noreferrer follow">
+                            href="https://www.pinterest.com/ihavearosyarc/" target="_blank"
+                            rel="noopener noreferrer follow">
                             <span>Follow on </span>
                             <span class="icon">
                                 <i class="fa-brands fa-pinterest"></i>
