--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="rosy arc, silk flower arrangements, cemetery flowers" />
     <meta name="author" content="Rosy Arc" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="images\rosy-arc-favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="images/rosy-arc-favicon.svg" />
     <link rel="stylesheet" href="mybulma/css/mystyles.css" />
     <script src="https://kit.fontawesome.com/dc7be97532.js" crossorigin="anonymous"></script>
 </head>
@@ -22,6 +22,9 @@
         <div class="navbar-brand is-justify-content-space-between">
             <a class="navbar-item pl-5 py-5" href="index.html">
                 <img src="images/rosy-arc-logo-2023.svg" alt="rosy arc logo" style="max-height: 70px">
+                <p class="navbar-item has-text-light has-text-weight-semibold is-size-3">
+                    Rosy Arc
+                </p>
             </a>
             <a id="burger" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
@@ -105,22 +108,44 @@
             <div class="section">
                 <div id="quality" class="columns has-text-centered">
                     <div class="column">
-                        <h3 class="title has-text-light">Flowers</h3>
-                        <p class="is-size-4-mobile is-size-3">
-                            All materials used are for outdoor
-                            weather. From the silk flowers to the glue
-                            used to keep your arrangement together.
-                        </p>
+                        <div class="block">
+                            <span class="icon-text">
+                                <span class="icon is-medium">
+                                    <i class="fa-solid fa-fan fa-xl"></i>
+                                </span>
+                                <span>
+                                    <h3 class="title has-text-light">Flowers</h3>
+                                </span>
+                            </span>
+                        </div>
+                        <div class="block">
+                            <p class="is-size-4-mobile is-size-3">
+                                All materials used are for outdoor
+                                weather. From the silk flowers to the glue
+                                used to keep your arrangement together.
+                            </p>
+                        </div>
                     </div>
                     <div class="column">
-                        <h3 class="title has-text-light">Materials</h3>
-                        <p class="is-size-4-mobile is-size-3">
-                            Vases are a sturdy flat-bottom plastic
-                            that holds your arrangement in place.
-                            The polystyrene used is commercial grade,
-                            making it resistant to various weather
-                            conditions.
-                        </p>
+                        <div class="block">
+                            <span class="icon-text">
+                                <span class="icon is-medium">
+                                    <i class="fa-solid fa-boxes-stacked fa-xl"></i>
+                                </span>
+                                <span>
+                                    <h3 class="title has-text-light">Materials</h3>
+                                </span>
+                            </span>
+                        </div>
+                        <div class="block">
+                            <p class="is-size-4-mobile is-size-3">
+                                Vases are a sturdy flat-bottom plastic
+                                that holds your arrangement in place.
+                                The polystyrene used is commercial grade,
+                                making it resistant to various weather
+                                conditions.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -136,26 +161,47 @@
             <div class="section">
                 <div id="delivery" class="columns has-text-centered">
                     <div class="column">
-                        <h3 class="title">Inventory</h3>
-                        <p class="is-size-4-mobile is-size-3">
-                            New arrangements are uploaded multiple times 
-                            weekly. If you're looking for more arrangements of
-                            a current design, ask us if we have more
-                            of the flowers in stock.
-                        </p>
+                        <div class="block">
+                            <span class="icon-text">
+                                <span class="icon is-medium">
+                                    <i class="fa-solid fa-warehouse fa-xl"></i>
+                                </span>
+                                <span>
+                                    <h3 class="title">Inventory</h3>
+                                </span>
+                            </span>
+                        </div>
+                        <div class="block">
+                            <p class="is-size-4-mobile is-size-3">
+                                New arrangements are uploaded multiple times
+                                weekly. If you're looking for more arrangements of
+                                a current design, ask us if we have more
+                                of the flowers in stock.
+                            </p>
+                        </div>
                     </div>
                     <div class="column">
-                        <h3 class="title">Shipping</h3>
-                        <p class="is-size-4-mobile is-size-3">
-                            We know the occasion may demand fast delivery.
-                            We look to ship your orders as quickly as
-                            possible. If you are located in the Southeast U.S. your package may arrive
-                            in 1-2 days.
-                        </p>
+                        <div class="column">
+                            <div class="block">
+                                <span class="icon-text">
+                                    <span class="icon is-medium">
+                                        <i class="fa-solid fa-truck-fast fa-xl"></i>
+                                    </span>
+                                    <span>
+                                        <h3 class="title">Shipping</h3>
+                                    </span>
+                                </span>
+                            </div>
+                            <p class="is-size-4-mobile is-size-3">
+                                We know the occasion may demand fast delivery.
+                                We look to ship your orders as quickly as
+                                possible. If you are located in the Southeast U.S. your package may arrive
+                                in 1-2 days.
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- end of 2 columns -->
+                <!-- end of 2 columns -->
         </section>
         <!-- end of delivery -->
     </main>
